agregado creditos de amigos que me ayudaron con el material

--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>
-        registrate y suma puntos
+        regístrate y suma puntos
     </title>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -16,8 +16,10 @@
         <img src="completaElFormulario.png">
         <br>
         <div class = "alinear">
-        <img src="user.png">
-        <input class="controls" type="text" name="nombre" id="nombre" required>
+<label>
+        <img src="user.png" alt="nombre">
+        <input class="controls" type="text" name="nombre" id="nombre" placeholder="escriba su nombre" required>
+</label>
         </div>
         <div class = "alinear">
         <img src="mail.png">
