--- a/register-accessibility.html
+++ b/register-accessibility.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>
-        registrate y suma puntos
+        regístrate y suma puntos
     </title>
     <link rel="stylesheet" href="estilos.css">
 </head>
